<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_container_dialog_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_38_percent_alpha">

    <android.support.v7.widget.CardView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:transitionName="@string/transition_dialog"
        card_view:cardCornerRadius="3dp"
        card_view:cardElevation="10dp"
        card_view:contentPadding="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_cancel_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:rotation="45"
                android:src="@drawable/ic_add_grey_700_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/start_date_time_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MaterialDialogTheme.TextAppearanceDialogError"
                app:theme="@style/MaterialDialogTheme.TextAppearanceDialog">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_start_time"
                    android:inputType="none"
                    android:singleLine="true"
                    android:textSize="@dimen/login_register_editview_text_size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/end_date_time_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/MaterialDialogTheme.TextAppearanceDialogError"
                app:theme="@style/MaterialDialogTheme.TextAppearanceDialog">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_end_time"
                    android:singleLine="true"
                    android:textSize="@dimen/login_register_editview_text_size" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_waagname_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_waag"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/select_waag"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />

            <!--<fr.ganfra.materialspinner.MaterialSpinner-->
                <!--android:id="@+id/ms_select_materialname_dialog"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="gone"-->
                <!--app:ms_alignLabels="true"-->
                <!--app:ms_arrowColor="@color/black"-->
                <!--app:ms_arrowSize="16dp"-->
                <!--app:ms_baseColor="@color/black"-->
                <!--app:ms_enableErrorLabel="false"-->
                <!--app:ms_floatingLabelColor="@color/black"-->
                <!--app:ms_floatingLabelText="@string/setect_material"-->
                <!--app:ms_highlightColor="@color/white"-->
                <!--app:ms_hint="@string/setect_material"-->
                <!--app:ms_hintColor="@color/black"-->
                <!--app:ms_multiline="true" />-->

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_equipment_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_equipment"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/select_equipment"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_test_type_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_test_type"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/select_test_type"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_material_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_material"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/select_material"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/ms_select_strength_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:ms_alignLabels="true"
                app:ms_arrowColor="@color/black"
                app:ms_arrowSize="16dp"
                app:ms_baseColor="@color/black"
                app:ms_enableErrorLabel="false"
                app:ms_floatingLabelColor="@color/black"
                app:ms_floatingLabelText="@string/select_strength"
                app:ms_highlightColor="@color/white"
                app:ms_hint="@string/select_strength"
                app:ms_hintColor="@color/black"
                app:ms_multiline="true" />

            <RadioGroup
                android:id="@+id/rg_handle_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_all_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="全部" />

                <RadioButton
                    android:id="@+id/rb_not_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="未处置" />

                <RadioButton
                    android:id="@+id/rb_handled_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="已处置" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_jinchang_handle_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_ji_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="季度" />

                <RadioButton
                    android:id="@+id/rb_yue_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="月" />

                <RadioButton
                    android:id="@+id/rb__zhou_handled_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="周" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_chuchang_handle_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_chu_all_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="全部" />

                <RadioButton
                    android:id="@+id/rb_feiliao_handle_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="费料" />

                <RadioButton
                    android:id="@+id/rb__diaobo_handled_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="调拨" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_examine_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/rb_all_examine_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="全部" />

                <RadioButton
                    android:id="@+id/rb_not_examine_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="未审批" />

                <RadioButton
                    android:id="@+id/rb_examined_dialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="已审批" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_material_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请选择材料类型"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/tv_department_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="请选择组织机构"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                />

            <com.dd.CircularProgressButton
                android:id="@+id/bt_search_dialog"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:background="?android:attr/selectableItemBackground"
                android:textColor="@color/cpb_white"
                android:textSize="15sp"
                app:cpb_cornerRadius="20dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_textIdle="查询" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>